tests/purs/failing/ClassHeadNoVTA4.out
Error found:
in module [33mMain[0m
at tests/purs/failing/ClassHeadNoVTA4.purs:8:11 - 8:21 (line 8, column 11 - line 8, column 21)

  No type class instance was found for
  [33m                 [0m
  [33m  Main.MultiFd t0[0m
  [33m               t1[0m
  [33m                 [0m
  The instance head contains unknown type variables. Consider using visible type application(s):
  [33m                                           [0m
  [33m  useMultiFd @tyNotAppearInBody @norThisOne[0m
  [33m                                           [0m

while checking that expression [33museMultiFd[0m
  has type [33mInt[0m
in value declaration [33mmultiFd[0m

where [33mt0[0m is an unknown type
      [33mt1[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/NoInstanceFound.md for more information,
or to contribute content related to this error.

